<resources>

    <!-- Titles -->
    <string name="app_name">HikingGO</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_compass">Compass</string>
    <string name="title_change_map_type">Change map type</string>

    <!-- Navigation drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Actions -->
    <string name="action_accept">Accept</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_settings">Settings</string>
    <string name="action_about_this">About this</string>
    <string name="action_home">Home</string>
    <string name="action_go_to_map">Go to map</string>
    <string name="action_my_routes">My routes</string>
    <string name="action_compass">Compass</string>
    <string name="action_map_type">Map type</string>
    <string name="action_map_type_satellite">Satellite mode</string>
    <string name="action_map_type_normal">Normal mode</string>
    <string name="action_map_type_terrain">Terrain mode</string>

    <!-- Messages -->
    <string name="msg_must_grant_location_permission">You must grant location permission!</string>
    <string name="msg_satellite_map_mode">Satellite map mode</string>
    <string name="msg_normal_map_mode">Normal map mode</string>
    <string name="msg_terrain_map_mode">Terrain map mode</string>
    <string name="msg_map_not_ready">Maps is not ready</string>

    <!-- Images description -->
    <string name="img_compass_background">Compass background</string>

</resources>
