<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/dialog_padding"
    android:paddingEnd="@dimen/dialog_padding">

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/DialogTitle"
        android:text="@string/title_change_map_type"
        />

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/nav_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:clickable="true">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/nav_normal_icon"
            android:layout_width="@dimen/dialog_row_icon_size"
            android:layout_height="@dimen/dialog_row_icon_size"
            android:layout_marginBottom="@dimen/dialog_row_padding"
            android:layout_marginStart="@dimen/dialog_row_padding"
            android:layout_marginTop="@dimen/dialog_row_padding"
            android:src="@drawable/ic_map_24dp"
            android:tint="@color/colorAccent" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/nav_normal_text"
            style="@style/DialogRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_map_type_normal" />

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/nav_terrain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:clickable="true">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/nav_terrain_icon"
            android:layout_width="@dimen/dialog_row_icon_size"
            android:layout_height="@dimen/dialog_row_icon_size"
            android:layout_marginBottom="@dimen/dialog_row_padding"
            android:layout_marginStart="@dimen/dialog_row_padding"
            android:layout_marginTop="@dimen/dialog_row_padding"
            android:src="@drawable/ic_terrain_24dp"
            android:tint="@color/colorAccent" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/nav_terrain_text"
            style="@style/DialogRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_map_type_terrain" />

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/nav_satellite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:clickable="true">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/nav_satellite_icon"
            android:layout_width="@dimen/dialog_row_icon_size"
            android:layout_height="@dimen/dialog_row_icon_size"
            android:layout_marginBottom="@dimen/dialog_row_padding"
            android:layout_marginStart="@dimen/dialog_row_padding"
            android:layout_marginTop="@dimen/dialog_row_padding"
            android:src="@drawable/ic_satellite_24dp"
            android:tint="@color/colorAccent" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/nav_satellite_text"
            style="@style/DialogRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_map_type_satellite" />

    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v7.widget.LinearLayoutCompat>